# vibepod

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  install.sh  proporsal.md
.devcontainer/: Dockerfile
.github/workflows/: ci.yml  release.yml
docs/: design.md  implementation-plan.md  proposal-phase0-slack-bridge.md  proposal-v2-dashboard.md  release-checklist.md
docs/specs/: 2026-04-02-output-layout-redesign.md  2026-04-02-review-option.md  2026-04-02-v14-plan.md
docs/specs/v1.4/: 2026-04-02-banner-on-run.md  2026-04-02-prompt-stream-output.md  2026-04-02-run-refactor.md  2026-04-02-tests-and-hardening.md  2026-04-03-default-reuse-container.md
docs/specs/v1.5/: 2026-04-02-config-toml.md  2026-04-02-mount-ps-logs.md  2026-04-02-review-evolution.md  2026-04-03-reuse-container.md  2026-04-03-reuse-review-fixes.md  2026-04-03-review-findings-refactor.md  2026-04-07-host-claude-env-mount.md
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-03-23-v1.1-features.md  2026-03-23-vibepod-auth.md  2026-03-23-vibepod-restore.md  2026-03-25-slack-bridge.md  2026-03-26-dynamic-buttons.md  2026-03-26-security-hardening.md  2026-04-07-host-claude-env-mount.md  2026-04-11-v1.6-ecc-migration.md
docs/superpowers/specs/: 2026-03-22-vibepod-design.md  2026-03-23-vibepod-auth-design.md  2026-03-23-vibepod-restore-design.md  2026-03-25-slack-bridge-design.md  2026-04-02-worktrees-auto-setup-design.md  2026-04-07-vibepod-concept-clarification.md
src/: auth.rs  ecc.rs  git.rs  lib.rs  main.rs  report.rs  session.rs
src/bridge/: detector.rs  formatter.rs  io.rs  logger.rs  mod.rs  slack.rs
src/cli/: init.rs  login.rs  logout.rs  logs.rs  mod.rs  ps.rs  restore.rs  rm.rs  run.rs  stop.rs  template.rs
src/cli/run/: interactive.rs  lock.rs  mod.rs  (+3 more)
src/config/: global.rs  mod.rs  projects.rs  vibepod_config.rs
src/runtime/: docker.rs  mod.rs  stream.rs
src/ui/: banner.rs  mod.rs  prompts.rs  sanitize.rs
templates/: Dockerfile
templates-data/review/: CLAUDE.md  settings.json  vibepod-template.toml
templates-data/rust-code/: CLAUDE.md  settings.json  vibepod-template.toml
tests/: auth_test.rs  bridge_detector_test.rs  bridge_formatter_test.rs  bridge_logger_test.rs  bridge_slack_test.rs  cli_lang_to_template.rs  cli_parse_mode.rs  cli_requires_ecc.rs  cli_review_permissions.rs  cli_template_mode_conflict.rs  cli_test.rs  config_test.rs  docker_test.rs  ecc_staging_integration.rs  env_file_test.rs  git_test.rs  integration_test.rs  lock_test.rs  report_test.rs  run_logic_test.rs  session_test.rs  stream_format_test.rs  template_status.rs  template_update.rs
(+40 files in other folders)
