[package]
name = "vibepod"
version = "1.0.0"
edition = "2021"
description = "Safely run AI coding agents in Docker containers"
license = "MIT"
repository = "https://github.com/ryugo/vibepod"

[lib]
name = "vibepod"
path = "src/lib.rs"

[[bin]]
name = "vibepod"
path = "src/main.rs"

[dependencies]
bollard = "0.18"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
rand = "0.8"
anyhow = "1"
futures-util = "0.3"
tar = "0.4"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
