[package]
name = "vibepod"
version = "1.4.0"
edition = "2021"
description = "Safely run AI coding agents in Docker containers"
license = "MIT"
repository = "https://github.com/ryugou/vibepod"

[lib]
name = "vibepod"
path = "src/lib.rs"

[[bin]]
name = "vibepod"
path = "src/main.rs"

[dependencies]
bollard = "0.18"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "io-util", "io-std", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
anyhow = "1"
futures-util = "0.3"
tar = "0.4"
chrono = "0.4"
libc = "0.2"
regex = "1"
strip-ansi-escapes = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
