[package]
name = "vibepod"
version = "1.5.0"
edition = "2021"
description = "Safely run AI coding agents in Docker containers"
license = "MIT"
repository = "https://github.com/ryugou/vibepod"

[lib]
name = "vibepod"
path = "src/lib.rs"

[[bin]]
name = "vibepod"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "io-util", "io-std", "time", "sync", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rand = "0.8"
anyhow = "1"
chrono = "0.4"
libc = "0.2"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
